@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/livecdfs-update.sh,v 1.43 2006/04/17 18:57:35 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/livecdfs-update.sh,v 1.44 2006/04/17 19:01:02 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
 
@@ -59,13 +59,6 @@ fi
 if [ -f /etc/sudoers ]
 then
 	sed -i '/NOPASSWD: ALL/ s/^# //' /etc/sudoers
-fi
-
-# We want the first user to be used when auto-starting X
-if [ -n "${clst_livecd_users}" -a -e /etc/startx ]
-then
-	first_user=$(echo ${clst_livecd_users} | cut -d' ' -f1)
-	sed -i "s/##STARTX/su - $first_user -c startx/" /root/.bashrc
 fi
 
 # Setup DHCP on all detected ethernet devices
@@ -372,6 +365,14 @@ case ${clst_livecd_type} in
 		fi
 		;;
 esac
+
+# We want the first user to be used when auto-starting X
+if [ -n "${clst_livecd_users}" -a -e /etc/startx ]
+then
+	first_user=$(echo ${clst_livecd_users} | cut -d' ' -f1)
+	sed -i "s/##STARTX/source /etc/profile && su - $first_user -c startx/" \
+		/root/.bashrc
+fi
 
 if [-e /lib/rcscripts/addons/udev-start.sh ]
 then
